force-app/main/default/objects/Order/fields/OrderTypeForIntegrations__c.field-meta.xml
<CustomField>
    <fullName>OrderTypeForIntegrations__c</fullName>
    <description>Field to sync the Order Type in a format that NetSuite expects (with spaces)</description>
    <formula>CASE(TEXT(Type),
                &quot;RegularOrder&quot;,&quot;Regular Order&quot;,
                &quot;ServiceOrder&quot;,&quot;Service Order&quot;,
                &quot;RenewalOrder&quot;,&quot;Renewal Order&quot;,
                &quot;FreeOrder&quot;,&quot;Free Order&quot;,
                &quot;Scrap&quot;,&quot;Scrap Order&quot;,
                &quot;Correction&quot;,&quot;Correction Order&quot;,
                &quot;Credit Order&quot;,&quot;Credit Order&quot;,
                &quot;Transfer Order&quot;,&quot;Transfer Order&quot;,
                &quot;&quot;
)</formula>
    <label>Order Type for Integrations</label>
    <type>Text</type>
</CustomField>