force-app/main/default/objects/Order/fields/OrderTypeJobRun__c.field-meta.xml
<CustomField>
    <fullName>OrderTypeJobRun__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If marked this will update all order line types with the applicable type</description>
    <label>Order Type Job Run</label>
    <type>Checkbox</type>
</CustomField>