force-app/main/default/objects/Order/fields/PalletRegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>PalletRegistrationNumber__c</fullName>
    <label>Pallet Registration Number</label>
    <length>22</length>
    <type>Text</type>
</CustomField>