force-app/main/default/objects/Order/fields/PaymentMethodType__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethodType__c</fullName>
    <label>Payment Method Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>invoice</fullName>
            </value>
            <value>
                <fullName>bancontact</fullName>
            </value>
            <value>
                <fullName>ideal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>