force-app/main/default/objects/Order/fields/PaymentPaid__c.field-meta.xml
<CustomField>
    <fullName>PaymentPaid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Paid</label>
    <type>Checkbox</type>
</CustomField>