force-app/main/default/objects/Order/fields/PreviousOrder__c.field-meta.xml
<CustomField>
    <fullName>PreviousOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the previous Order in case of renewals.</description>
    <label>Previous Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Follow Up Orders</relationshipLabel>
    <relationshipName>FollowUpOrders</relationshipName>
    <type>Lookup</type>
</CustomField>