force-app/main/default/objects/Order/fields/PricebookId__c.field-meta.xml
<CustomField>
    <fullName>PricebookId__c</fullName>
    <formula>Pricebook2Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PricebookId</label>
    <type>Text</type>
</CustomField>