force-app/main/default/objects/Order/fields/PricebookName__c.field-meta.xml
<CustomField>
    <fullName>PricebookName__c</fullName>
    <formula>Pricebook2.Name</formula>
    <label>Pricebook Name</label>
    <type>Text</type>
</CustomField>