force-app/main/default/objects/Order/fields/ProductDeliverComplete__c.field-meta.xml
<CustomField>
    <fullName>ProductDeliverComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Deliver Complete</label>
    <type>Checkbox</type>
</CustomField>