force-app/main/default/objects/Order/fields/ProductSelectorMessage__c.field-meta.xml
<CustomField>
    <fullName>ProductSelectorMessage__c</fullName>
    <label>Product Selector Message</label>
    <type>TextArea</type>
</CustomField>