force-app/main/default/objects/Order/fields/ProductStartDate__c.field-meta.xml
<CustomField>
    <fullName>ProductStartDate__c</fullName>
    <label>Product Start Date</label>
    <type>Date</type>
</CustomField>