force-app/main/default/objects/Order/fields/QuoteVersion__c.field-meta.xml
<CustomField>
    <fullName>QuoteVersion__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Quote Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>