force-app/main/default/objects/Order/fields/ReferenceID__c.field-meta.xml
<CustomField>
    <fullName>ReferenceID__c</fullName>
    <description>This ID references the original oppportunity from which this order was created. Needed for invoicing.</description>
    <label>Reference ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>