force-app/main/default/objects/Order/fields/RelatedOrderActivationBlock__c.field-meta.xml
<CustomField>
    <fullName>RelatedOrderActivationBlock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Related Order Activation Block</label>
    <type>Checkbox</type>
</CustomField>