force-app/main/default/objects/Order/fields/Remindernotificationemail__c.field-meta.xml
<CustomField>
    <fullName>Remindernotificationemail__c</fullName>
    <label>Reminder notification email</label>
    <type>TextArea</type>
</CustomField>