force-app/main/default/objects/Order/fields/Renewable__c.field-meta.xml
<CustomField>
    <fullName>Renewable__c</fullName>
    <label>Renewable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>