force-app/main/default/objects/Order/fields/ResetRenewalOrderCreated__c.field-meta.xml
<CustomField>
    <fullName>ResetRenewalOrderCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is populated when the Reset Assets Renewal Dates button is clicked and the user selected that a new Renewal Order Should be created based on an existing Renewal Order.</description>
    <label>Reset Renewal Order Created</label>
    <type>Checkbox</type>
</CustomField>