force-app/main/default/objects/Order/fields/RoundedTotalAmount__c.field-meta.xml
<CustomField>
    <fullName>RoundedTotalAmount__c</fullName>
    <description>Total Amount rounded to 2 decimals</description>
    <formula>ROUND(TotalAmount,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rounded Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>