force-app/main/default/objects/Order/fields/ShipbyDate__c.field-meta.xml
<CustomField>
    <fullName>ShipbyDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Ship by Date</label>
    <type>Date</type>
</CustomField>