force-app/main/default/objects/Order/fields/ShipComplete__c.field-meta.xml
<CustomField>
    <fullName>ShipComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only ship this order when all items are deliverable</inlineHelpText>
    <label>Ship Complete</label>
    <type>Checkbox</type>
</CustomField>