force-app/main/default/objects/Order/fields/shipImmediately__c.field-meta.xml
<CustomField>
    <fullName>shipImmediately__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Warehouse will receive the order today regardless of the ship by date</inlineHelpText>
    <label>Ship Immediately</label>
    <type>Checkbox</type>
</CustomField>