force-app/main/default/objects/Order/fields/ShippingCostDomestic__c.field-meta.xml
<CustomField>
    <fullName>ShippingCostDomestic__c</fullName>
    <label>Shipping Cost Domestic</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>