force-app/main/default/objects/Order/fields/ShippingCostExempt__c.field-meta.xml
<CustomField>
    <fullName>ShippingCostExempt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defaults from the Account</description>
    <label>Shipping Cost Exempt</label>
    <type>Checkbox</type>
</CustomField>