force-app/main/default/objects/Order/fields/ShippingCostMethodNS__c.field-meta.xml
<CustomField>
    <fullName>ShippingCostMethodNS__c</fullName>
    <formula>IF(NOT(ISBLANK(TEXT(ShippingIndicationRule__c))),TEXT(ShippingIndicationRule__c),
IF(ShippingCostExempt__c=True,&quot;Shipping Cost Exempt&quot;,
TEXT(ShippingCostMethod__c)))</formula>
    <label>Shipping Cost Method NS</label>
    <type>Text</type>
</CustomField>