force-app/main/default/objects/Order/fields/ShippingCostMethodNsId__c.field-meta.xml
<CustomField>
    <fullName>ShippingCostMethodNsId__c</fullName>
    <formula>IF( TEXT( OperatingCompany__c ) = &apos;Plantyn&apos;,
CASE(ShippingCostMethodNS__c ,
&apos;Based on order total&apos;, $Label.ShipPU_OrderTotal,
&apos;Based on weight Domestic&apos;, $Label.ShipPU_Domestic,
&apos;Based on weight non Domestic&apos;, $Label.ShipPU_NonDomestic,
&apos;Shipping Cost Exempt&apos;, $Label.ShipPU_Exempt,
&apos;&apos;
),
IF (TEXT( OperatingCompany__c ) = &apos;Noordhoff&apos;,
CASE(ShippingCostMethodNS__c,
&apos;Based on order total&apos;, $Label.ShipNU_OrderTotal,
&apos;Based on weight Domestic&apos;, $Label.ShipNU_Domestic,
&apos;Based on weight non Domestic&apos;, $Label.ShipNU_NonDomestic,
&apos;Shipping Cost Exempt&apos;, $Label.ShipNU_Exempt,
&apos;&apos;
),
IF (TEXT( OperatingCompany__c ) = &apos;Noordhoff Zorg&apos;,
CASE(ShippingCostMethodNS__c,
&apos;Based on order total&apos;, $Label.ShipNZ_OrderTotal,
&apos;Based on weight Domestic&apos;, $Label.ShipNZ_Domestic,
&apos;Based on weight non Domestic&apos;, $Label.ShipNZ_NonDomestic,
&apos;Shipping Cost Exempt&apos;, $Label.ShipNZ_Exempt,
&apos;&apos;
),
IF (TEXT( OperatingCompany__c ) = &apos;Liber&apos;,
CASE(ShippingCostMethodNS__c,
&apos;Based on order total&apos;, $Label.ShipLI_OrderTotal,
&apos;Based on weight Domestic&apos;, $Label.ShipLI_Domestic,
&apos;Based on weight non Domestic&apos;, $Label.ShipLI_NonDomestic,
&apos;Shipping Cost Exempt&apos;, $Label.ShipLI_Exempt,
&apos;&apos;
),
&apos;&apos;
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Cost Method NS Id</label>
    <type>Text</type>
</CustomField>