force-app/main/default/objects/Order/fields/ShippingCostNonDomestic__c.field-meta.xml
<CustomField>
    <fullName>ShippingCostNonDomestic__c</fullName>
    <label>Shipping Cost Non Domestic</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>