force-app/main/default/objects/Order/fields/ShippingHouseNumberAddition__c.field-meta.xml
<CustomField>
    <fullName>ShippingHouseNumberAddition__c</fullName>
    <label>Shipping House Number Addition</label>
    <length>10</length>
    <type>Text</type>
</CustomField>