force-app/main/default/objects/Order/fields/ShippingIndicationRule__c.field-meta.xml
<CustomField>
    <fullName>ShippingIndicationRule__c</fullName>
    <label>Shipping Indication Rule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ShippingCostMethod</valueSetName>
    </valueSet>
</CustomField>