force-app/main/default/objects/Order/fields/Shipto__c.field-meta.xml
<CustomField>
    <fullName>Shipto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship to</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Ship to)</relationshipLabel>
    <relationshipName>ShiptoOrders</relationshipName>
    <type>Lookup</type>
</CustomField>