force-app/main/default/objects/Order/fields/ShipTo_Address_Validated_Formula__c.field-meta.xml
<CustomField>
    <fullName>ShipTo_Address_Validated_Formula__c</fullName>
    <formula>ShipToAddress__r.Validated_Address__c</formula>
    <label>ShipTo Address Validated Formula</label>
    <type>Checkbox</type>
</CustomField>