force-app/main/default/objects/Order/fields/ShipToAccountOrder__c.field-meta.xml
<CustomField>
    <fullName>ShipToAccountOrder__c</fullName>
    <formula>Shipto__r.TempLegalName__c</formula>
    <label>Ship To Account Order</label>
    <type>Text</type>
</CustomField>