force-app/main/default/objects/Order/fields/ShipToAddress__c.field-meta.xml
<CustomField>
    <fullName>ShipToAddress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship-To Address</label>
    <referenceTo>ILAddress__c</referenceTo>
    <relationshipLabel>Orders (Ship-To Address)</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>