force-app/main/default/objects/Order/fields/ShipToAddressValidated__c.field-meta.xml
<CustomField>
    <fullName>ShipToAddressValidated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ship-To Address Validated</label>
    <type>Checkbox</type>
</CustomField>