force-app/main/default/objects/Order/fields/shipToAttentionOf__c.field-meta.xml
<CustomField>
    <fullName>shipToAttentionOf__c</fullName>
    <label>Ship-To Attention Of</label>
    <length>255</length>
    <type>Text</type>
</CustomField>