force-app/main/default/objects/Order/fields/ShiptoCount__c.field-meta.xml
<CustomField>
    <fullName>ShiptoCount__c</fullName>
    <label>Ship to Count</label>
    <summaryForeignKey>OrderShipto__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>