force-app/main/default/objects/Order/fields/ShipToCustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>ShipToCustomerNumber__c</fullName>
    <formula>Shipto__r.NetsuiteCustomerNumber__c</formula>
    <label>Ship To Customer Number</label>
    <type>Text</type>
</CustomField>