force-app/main/default/objects/Order/fields/ShipToDepartment__c.field-meta.xml
<CustomField>
    <fullName>ShipToDepartment__c</fullName>
    <description>Ship to Department name</description>
    <formula>Shipto__r.Department__c</formula>
    <label>Ship to Department</label>
    <type>Text</type>
</CustomField>