force-app/main/default/objects/Order/fields/ShipToInformation__c.field-meta.xml
<CustomField>
    <fullName>ShipToInformation__c</fullName>
    <label>Ship To Information</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>