force-app/main/default/objects/Order/fields/ShipToLanguage__c.field-meta.xml
<CustomField>
    <fullName>ShipToLanguage__c</fullName>
    <formula>TEXT(Shipto__r.CommunicationLanguage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship To Language</label>
    <type>Text</type>
</CustomField>