force-app/main/default/objects/Order/fields/ShipToLegalName__c.field-meta.xml
<CustomField>
    <fullName>ShipToLegalName__c</fullName>
    <description>Legal Name of the Ship-to party</description>
    <formula>Shipto__r.FullLegalName__c</formula>
    <label>Ship to Legal Name</label>
    <type>Text</type>
</CustomField>