force-app/main/default/objects/Order/fields/SMOnboardingCompleted__c.field-meta.xml
<CustomField>
    <fullName>SMOnboardingCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Onboarding completed by Success manager</label>
    <type>Checkbox</type>
</CustomField>