force-app/main/default/objects/Order/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B2B Shop</fullName>
            </value>
            <value>
                <fullName>B2B Salesforce</fullName>
                <default>true</default>
                <label>B2B Salesforce</label>
            </value>
            <value>
                <fullName>Trade</fullName>
            </value>
            <value>
                <fullName>eCommerce B2C</fullName>
            </value>
            <value>
                <fullName>eCommerce B2B</fullName>
            </value>
            <value>
                <fullName>NetSuite: Manual</fullName>
            </value>
            <value>
                <fullName>Order Form</fullName>
            </value>
            <value>
                <fullName>Trade - Early Season Order</fullName>
            </value>
            <value>
                <fullName>Tender</fullName>
            </value>
            <value>
                <fullName>Depot</fullName>
            </value>
            <value>
                <fullName>Studiemeister</fullName>
            </value>
            <value>
                <fullName>B2B Portal</fullName>
            </value>
            <value>
                <fullName>B2B DirectPayment</fullName>
                <isActive>false</isActive>
                <label>B2B DirectPayment</label>
            </value>
            <value>
                <fullName>B2B Invoice</fullName>
                <isActive>false</isActive>
                <label>B2B Invoice</label>
            </value>
            <value>
                <fullName>B2B Trade</fullName>
                <isActive>false</isActive>
                <label>B2B Trade</label>
            </value>
            <value>
                <fullName>Salesforce</fullName>
                <isActive>false</isActive>
                <label>Salesforce</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>