force-app/main/default/objects/Order/fields/StatusUpdateDateTime__c.field-meta.xml
<CustomField>
    <fullName>StatusUpdateDateTime__c</fullName>
    <formula>Now() +( 1/1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Update Date Time</label>
    <type>DateTime</type>
</CustomField>