force-app/main/default/objects/Order/fields/SyncedWithNS__c.field-meta.xml
<CustomField>
    <fullName>SyncedWithNS__c</fullName>
    <description>Order status will be synced Hourly</description>
    <formula>IF(NOW() - ActivatedDate &lt; 1 ,
    IF(ISPICKVAL(NSOrderStatus__c,&quot;&quot;), false, true), true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Synced with NS</label>
    <type>Checkbox</type>
</CustomField>