force-app/main/default/objects/Order/fields/technicalStatus__c.field-meta.xml
<CustomField>
    <fullName>technicalStatus__c</fullName>
    <formula>IF( AND(
		ValidationErrorsOrder__c = 0,
		ValidationErrorsOrderProducts__c = 0,
		ErrorReason__c = &quot;None&quot;
		 )
	,&quot;No Errors&quot;,&quot;Errors&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Technical Status</label>
    <type>Text</type>
</CustomField>