force-app/main/default/objects/Order/fields/TotalInclVAT__c.field-meta.xml
<CustomField>
    <fullName>TotalInclVAT__c</fullName>
    <formula>TotalAmount + TotalVAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total (Incl VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>