force-app/main/default/objects/Order/fields/TotalLineItemQuantity__c.field-meta.xml
<CustomField>
    <fullName>TotalLineItemQuantity__c</fullName>
    <label>Total Line Item Quantity</label>
    <summarizedField>OrderItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.ProductType__c</field>
        <operation>notEqual</operation>
        <value>Item Group</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>