force-app/main/default/objects/Order/fields/TotalManualDiscount__c.field-meta.xml
<CustomField>
    <fullName>TotalManualDiscount__c</fullName>
    <label>Total Manual Discount</label>
    <summarizedField>OrderItem.ManualDiscountValue__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>