force-app/main/default/objects/Order/fields/TotalOrderDiscount__c.field-meta.xml
<CustomField>
    <fullName>TotalOrderDiscount__c</fullName>
    <label>Total Order Discount</label>
    <summarizedField>OrderItem.TotalDiscountAmount__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>