force-app/main/default/objects/Order/fields/TotalStructuredDiscount__c.field-meta.xml
<CustomField>
    <fullName>TotalStructuredDiscount__c</fullName>
    <label>Total Structured Discount</label>
    <summarizedField>OrderItem.ListPriceDiscountAmount__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>