force-app/main/default/objects/Order/fields/TotalVAT__c.field-meta.xml
<CustomField>
    <fullName>TotalVAT__c</fullName>
    <label>Total VAT</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>