force-app/main/default/objects/Order/fields/TriggerBusinessRulesRetries__c.field-meta.xml
<CustomField>
    <fullName>TriggerBusinessRulesRetries__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Trigger Business Rules Retries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>