force-app/main/default/objects/Order/fields/UniqueOrderID__c.field-meta.xml
<CustomField>
    <fullName>UniqueOrderID__c</fullName>
    <description>This field is the unique id</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This number is the unique Order ID</inlineHelpText>
    <label>Unique Order ID</label>
    <type>Text</type>
</CustomField>