force-app/main/default/objects/Order/fields/ValidateAccountErrors__c.field-meta.xml
<CustomField>
    <fullName>ValidateAccountErrors__c</fullName>
    <formula>IF(Account.ValidateErrors__c = true, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validate AccountErrors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>