force-app/main/default/objects/Order/fields/ValidateAccountStatus__c.field-meta.xml
<CustomField>
    <fullName>ValidateAccountStatus__c</fullName>
    <formula>IF(OR(ISPICKVAL(Billto__r.Status__c, &quot;Inactive&quot;), ISPICKVAL(Billto__r.Status__c, &quot;Pending Inactive&quot;),ISPICKVAL(Shipto__r.Status__c, &quot;Inactive&quot;), ISPICKVAL(Shipto__r.Status__c, &quot;Pending Inactive&quot;)) ,1,0)</formula>
    <label>Validate Account Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>