force-app/main/default/objects/Order/fields/ValidateActivateEmailsRequired__c.field-meta.xml
<CustomField>
    <fullName>ValidateActivateEmailsRequired__c</fullName>
    <formula>IF(AND(OR(ISPICKVAL(OperatingCompany__c, &apos;Plantyn&apos;),
ISPICKVAL(OperatingCompany__c, &apos;Liber&apos;),
AND(ISPICKVAL(OperatingCompany__c, &apos;Noordhoff&apos;), Account.isProfessional__c = false)),OR(
InvoiceEmail__c = null ,
OrderNotificationEmail__c = null ,
BillingReminderEmail__c = null)),1,
IF(AND((ISPICKVAL(OperatingCompany__c, &apos;Noordhoff Zorg&apos;) || AND(ISPICKVAL(OperatingCompany__c, &apos;Noordhoff&apos;), Account.isProfessional__c = true)), OR(
InvoiceEmail__c = null ,
BillingReminderEmail__c = null)),1,0))</formula>
    <label>Validate ActivateEmailsRequired</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>