force-app/main/default/objects/Order/fields/ValidateActivateShippingAddressRequired__c.field-meta.xml
<CustomField>
    <fullName>ValidateActivateShippingAddressRequired__c</fullName>
    <formula>IF(AND(OR(ShippingCountry =&apos;Sweden&apos;, ShippingCountry =&apos;Netherlands&apos;, ShippingCountry =&apos;Belgium&apos;, ShippingCountry =&apos;Luxembourg&apos;),
OR(ShippingStreet = null,ShippingCity = null,ShippingCountry = null,ShippingPostalCode = null)),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validate ActivateShippingAddressRequired</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>