force-app/main/default/objects/Order/fields/ValidateActivateValidation__c.field-meta.xml
<CustomField>
    <fullName>ValidateActivateValidation__c</fullName>
    <formula>IF(AND(TEXT(Status)=&apos;Activated&apos;,
ValidationErrorsOrderProducts__c &gt;= 1),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validate ActivateValidation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>