force-app/main/default/objects/Order/fields/ValidateB2BLineCountError__c.field-meta.xml
<CustomField>
    <fullName>ValidateB2BLineCountError__c</fullName>
    <formula>IF(OR(AND(TEXT(Type)!=&apos;RenewalOrder&apos;,TEXT(Source__c)=&apos;B2B Salesforce&apos;),OrderImportLineCountSent__c =  OrderImportLineCount__c ), 0,
IF(AND(TEXT(Type)=&apos;RenewalOrder&apos;,OrderImportLineCountSent__c =  OrderImportLineCount__c ), 0,			
			1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validate B2B Line Count Error</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>