force-app/main/default/objects/Order/fields/ValidateBillingAddress__c.field-meta.xml
<CustomField>
    <fullName>ValidateBillingAddress__c</fullName>
    <formula>IF(OR(
      CONTAINS(SUBSTITUTE(BillingStreet, SUBSTITUTE($Label.line_break, &quot;-&quot;, &quot;&quot;),&quot;&lt;BR&gt;&quot;), &apos;&lt;BR&gt;&apos;), 
      FIND(&quot;	&quot;,BillingStreet) &gt; 0), 
1, 0)</formula>
    <label>Validate BillingAddress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>