force-app/main/default/objects/Order/fields/ValidateBillingAddressValidated__c.field-meta.xml
<CustomField>
    <fullName>ValidateBillingAddressValidated__c</fullName>
    <formula>IF(AND(BillToAddressValidated__c=false,$Label.ValidateAddress=&apos;true&apos;), 1, 0)</formula>
    <label>Validate BillingAddressValidated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>