force-app/main/default/objects/Order/fields/ValidateBillToEmpty__c.field-meta.xml
<CustomField>
    <fullName>ValidateBillToEmpty__c</fullName>
    <formula>IF( Billto__c = null, 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validate BillToEmpty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>