force-app/main/default/objects/Order/fields/ValidateBilltoErrors__c.field-meta.xml
<CustomField>
    <fullName>ValidateBilltoErrors__c</fullName>
    <formula>IF(Billto__r.ValidateErrors__c = true, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validate Bill-to Errors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>