force-app/main/default/objects/Order/fields/ValidateCreditLimitCheck__c.field-meta.xml
<CustomField>
    <fullName>ValidateCreditLimitCheck__c</fullName>
    <formula>IF(AND(
TEXT(PaymentMethod__c)=&quot;Invoice&quot;,
CreditStatus__c = &quot;Bad&quot;
),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validate CreditLimitCheck</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>