force-app/main/default/objects/Order/fields/ValidateDigitalforNetherlands__c.field-meta.xml
<CustomField>
    <fullName>ValidateDigitalforNetherlands__c</fullName>
    <formula>IF(AND(ShippingCountry = &apos;Netherlands&apos;,  
MultipleShippingLocations__c = false,
TEXT(Source__c) != &apos;eCommerce B2C&apos; ,
NonInventoryItemCount__c &gt; 0,
TEXT(OperatingCompany__c) = &apos;Plantyn&apos;),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ValidateDigitalforNetherlands</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>