force-app/main/default/objects/Order/fields/ValidateFreeAndServiceMustbeZeroOnActiv__c.field-meta.xml
<CustomField>
    <fullName>ValidateFreeAndServiceMustbeZeroOnActiv__c</fullName>
    <description>Free and Service Orders can&apos;t have a total greater than 0 for Activation</description>
    <formula>IF(AND(OR( TEXT(Type) =&apos;ServiceOrder&apos;,TEXT(Type)=&apos;FreeOrder&apos;), TotalAmount &gt;0), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validate FreeAndServiceMustbeZeroOnActiv</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>