force-app/main/default/objects/Order/fields/ValidateIGComponentMismatch__c.field-meta.xml
<CustomField>
    <fullName>ValidateIGComponentMismatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validate IGComponent Mismatch</label>
    <type>Checkbox</type>
</CustomField>