force-app/main/default/objects/Order/fields/ValidateInventoryOnMultipleLocations__c.field-meta.xml
<CustomField>
    <fullName>ValidateInventoryOnMultipleLocations__c</fullName>
    <formula>IF(
    NOT(
        TEXT(Status) = &apos;Activated&apos;
    ),
    if(InventoryItemCount__c&gt;0,1,if(InventoryItemShippingAddressCount__c&gt;1,1,0)),
    0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validate Inventory On Multiple Locations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>