force-app/main/default/objects/Order/fields/ValidateItemHfdstructuur__c.field-meta.xml
<CustomField>
    <fullName>ValidateItemHfdstructuur__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Validate Item Hfdstructuur</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>